fix: fixing the image size by using object-fit: cover to stretch the image all over instead of center

--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -10,8 +10,8 @@
      width: 95%;
      height: 300px;
      border-radius: 4px;
-     object-fit: center;
-     box-shadow: 0 3px 10px rgba(245, 238, 238, 0.6);
+     object-fit: cover;
+  
 
     
 }
